backend almost done

--- a/src/components/Navigation/Toolbar/Toolbar.module.css
+++ b/src/components/Navigation/Toolbar/Toolbar.module.css
@@ -16,3 +16,15 @@
 .Toolbar nav{
     height:100%;
 }
+.Logo{
+    height: 80%;
+}
+
+.PcOnly{
+    opacity: 0;
+}
+@media (min-width:500px){
+    .PcOnly{
+      opacity:1;
+    }
+}
